syntax = "proto3";

package pb;
option go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message CategoryList {
    repeated Category categories = 1;
}

message EmptyMessage{}

service CategoryService {
    rpc CreateCategory(CategoryRequest) returns (CategoryResponse){}
    rpc CreateCategoryStream(stream CategoryRequest) returns (CategoryList){}
    rpc ListCategories(EmptyMessage) returns (CategoryList) {}
}